src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstCloseDate__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_HouseholdMailingAddress__c</fullName>
        <formula>Household__r.Formula_MailingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_HouseholdPhone__c</fullName>
        <formula>Household__r.HouseholdPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastCloseDateHH__c</fullName>
        <formula>Household__r.LastCloseDate__c</formula>
        <label>Last Household Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCloseDate__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastMembershipDate__c</fullName>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMembershipLevel__c</fullName>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastMembershipOrigin__c</fullName>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level - DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MembershipEndDate__c</fullName>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipJoinDate__c</fullName>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Naming_Exclusions__c</fullName>
        <inlineHelpText>Determines which household names this contact is NOT included as part of.</inlineHelpText>
        <label>Naming Exclusions</label>
        <picklist>
            <picklistValues>
                <fullName>Household__c.Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household__c.Formal_Greeting__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household__c.Informal_Greeting__c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last 365 Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountLastYearHH__c</fullName>
        <formula>Household__r.OppAmountLastYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountThisYearHH__c</fullName>
        <formula>Household__r.OppAmountThisYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last 365 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Individual Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New or Edited Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contacts</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Gifts__c</fullName>
        <formula>Household__r.TotalOppAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Donation_Date__c</fullName>
        <description>This field is only used with the one-to-one Organization to Contact model.</description>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Lifetime_Giving_History_Amount__c</fullName>
        <description>This field is only used with the one-to-one Organization to Contact model.</description>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <label>_SYSTEM: ACCOUNT PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>One-to-One</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is no longer used and should not be referenced. It has been replaced by Type_of_Account__c</inlineHelpText>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the type of Account this Contact is connected to.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>